--- a/cross-toolchain-wrapper/pom.xml
+++ b/cross-toolchain-wrapper/pom.xml
@@ -10,7 +10,7 @@
     <parent>    
         <groupId>gnu.io.rxtx</groupId>
         <artifactId>rxtx-parent</artifactId>
-        <version>2.2-stabilize-SNAPSHOT</version>
+        <version>2.4.1.bekey</version>
     </parent>
     <build>
         <plugins>
