--- a/librxtxSerial-osx-x86_64/pom.xml
+++ b/librxtxSerial-osx-x86_64/pom.xml
@@ -4,13 +4,13 @@
     <groupId>gnu.io.rxtx</groupId>
     <artifactId>librxtxSerial-osx-x86_64</artifactId>
     <packaging>jnilib</packaging>
-    <version>2.2-stabilize-SNAPSHOT</version>
+    <version>2.4.1.bekey</version>
     <name>[osx/x86_64] rxtxSerial</name>
     <url>http://rxtx.qbang.org</url>
     <parent>    
         <groupId>gnu.io.rxtx</groupId>
         <artifactId>rxtx-parent</artifactId>
-        <version>2.2-stabilize-SNAPSHOT</version>
+        <version>2.4.1.bekey</version>
     </parent>
     <profiles>
         <profile>
@@ -72,7 +72,7 @@
                                 <artifactItem>
                                     <groupId>gnu.io.rxtx</groupId>
                                     <artifactId>rxtxSerial-native</artifactId>
-                                    <version>2.2-stabilize-SNAPSHOT</version>
+                                    <version>2.4.1.bekey</version>
                                     <type>zip</type>
                                     <classifier>sources</classifier>
                                     <overWrite>true</overWrite>
