--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>gnu.io.rxtx</groupId>
     <artifactId>rxtx-parent</artifactId>
     <packaging>pom</packaging>
-    <version>2.2-stabilize-SNAPSHOT</version>
+    <version>2.4.1.bekey</version>
     <name>RXTX parent POM</name>
     <url>http://rxtx.qbang.org</url>
     <dependencyManagement>
@@ -12,17 +12,17 @@
             <dependency>
                 <groupId>gnu.io.rxtx</groupId>
                 <artifactId>rxtx-api</artifactId>
-                <version>2.2-stabilize-SNAPSHOT</version>
+                <version>2.4.1.bekey</version>
             </dependency>
             <dependency>
                 <groupId>gnu.io.rxtx</groupId>
                 <artifactId>rxtxSerial-java</artifactId>
-                <version>2.2-stabilize-SNAPSHOT</version>
+                <version>2.4.1.bekey</version>
             </dependency>
             <dependency>
                 <groupId>gnu.io.rxtx</groupId>
                 <artifactId>rxtxSerial</artifactId>
-                <version>2.2-stabilize-SNAPSHOT</version>
+                <version>2.4.1.bekey</version>
             </dependency>
             <dependency>
                 <groupId>junit</groupId>
@@ -33,7 +33,7 @@
             <dependency>
                 <groupId>gnu.io.rxtx</groupId>
                 <artifactId>rxtxSerial-native</artifactId>
-                <version>2.2-stabilize-SNAPSHOT</version>
+                <version>2.4.1.bekey</version>
                 <scope>compile</scope>
                 <classifier>sources</classifier>
                 <type>zip</type>
@@ -49,42 +49,42 @@
             <dependency>
                 <groupId>gnu.io.rxtx</groupId>
                 <artifactId>librxtxSerial-linux-x86</artifactId>
-                <version>2.2-stabilize-SNAPSHOT</version>
+                <version>2.4.1.bekey</version>
                 <type>so</type>
             </dependency>
             <dependency>
                 <groupId>gnu.io.rxtx</groupId>
                 <artifactId>librxtxSerial-linux-x86_64</artifactId>
-                <version>2.2-stabilize-SNAPSHOT</version>
+                <version>2.4.1.bekey</version>
                 <type>so</type>
             </dependency>
             <dependency>
                 <groupId>gnu.io.rxtx</groupId>
                 <artifactId>rxtxSerial-windows-x86</artifactId>
-                <version>2.2-stabilize-SNAPSHOT</version>
+                <version>2.4.1.bekey</version>
                 <type>dll</type>
             </dependency>
             <dependency>
                 <groupId>gnu.io.rxtx</groupId>
                 <artifactId>rxtxSerial-windows-x86_64</artifactId>
-                <version>2.2-stabilize-SNAPSHOT</version>
+                <version>2.4.1.bekey</version>
                 <type>dll</type>
             </dependency>
             <dependency>
                 <groupId>gnu.io.rxtx</groupId>
                 <artifactId>librxtxSerial-osx-x86_64</artifactId>
-                <version>2.2-stabilize-SNAPSHOT</version>
+                <version>2.4.1.bekey</version>
                 <type>jnilib</type>
             </dependency>
             <dependency>
                 <groupId>gnu.io.rxtx</groupId>
                 <artifactId>rxtxSerial-bin</artifactId>
-                <version>2.2-stabilize-SNAPSHOT</version>
+                <version>2.4.1.bekey</version>
             </dependency>
             <dependency>
                 <groupId>gnu.io.rxtx</groupId>
                 <artifactId>rxtxSerial-test</artifactId>
-                <version>2.2-stabilize-SNAPSHOT</version>
+                <version>2.4.1.bekey</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
