--- a/rxtxSerial/pom.xml
+++ b/rxtxSerial/pom.xml
@@ -4,13 +4,13 @@
     <groupId>gnu.io.rxtx</groupId>
     <artifactId>rxtxSerial</artifactId>
     <packaging>pom</packaging>
-    <version>2.2-stabilize-SNAPSHOT</version>
+    <version>2.4.1.bekey</version>
     <name>RXTX default serial driver</name>
     <url>http://rxtx.qbang.org</url>
     <parent>    
         <groupId>gnu.io.rxtx</groupId>
         <artifactId>rxtx-parent</artifactId>
-        <version>2.2-stabilize-SNAPSHOT</version>
+        <version>2.4.1.bekey</version>
     </parent>
     <build>
         <plugins>
